# brainfs

./: README.md  brainfs.cabal
src/: Args.hs  Core.hs  Languages.hs  Main.hs  MainTH.hs  Types.hs  Util.hs
src/Languages/: Alphuck.hs  AutoSpoon.hs  Binaryfuck.hs  BitZ.hs  Bitfuck.hs  Boolfuck.hs  Braincrash.hs  Brainfuck.hs  Brainfunct.hs  Brainhype.hs  Headsecks.hs  RISBF.hs  ReverseFuck.hs  ReversibleBF.hs  Spoon.hs  Unary.hs
