name:                brainfs
version:             0.1.0.0
synopsis:            brainfuck collection of various derivatives
homepage:            https://github.com/bforte/brainfs#README.md
license:             BSD3
license-file:        LICENSE
author:              BMO
maintainer:          bforte@inventati.org
copyright:           2018 BMO
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable brainfs
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Args
                     , Core
                     , Languages
                     , Languages.Alphuck
                     , Languages.AutoSpoon
                     , Languages.Binaryfuck
                     , Languages.Bitfuck
                     , Languages.BitZ
                     , Languages.Boolfuck
                     , Languages.Braincrash
                     , Languages.Brainfuck
                     , Languages.Brainfunct
                     , Languages.Brainhype
                     , Languages.Headsecks
                     , Languages.ReverseFuck
                     , Languages.ReversibleBF
                     , Languages.RISBF
                     , Languages.Spoon
                     , MainTH
                     , Types
                     , Util
  default-language:    Haskell2010
  ghc-options:         -freverse-errors -Wunused-imports -Wunused-matches -Wincomplete-patterns
  build-depends:       array
                     , autoexporter
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , mtl
                     , parsec
                     , random
                     , template-haskell
